# pico-template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  diagram.json  docker-compose.yml  project.yml  wokwi.toml
.devcontainer/: Dockerfile  devcontainer.json
apps/: CMakeLists.txt  hello_world.c  main.c
include/: tusb_config.h
lib/: CMakeLists.txt
lib/mpr121/: CMakeLists.txt  mpr121.c
test/mpr121/: CMakeLists.txt  test_mpr121.c
